# MemoryCenter

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.catpaw/rules/: hippocampus-archive.md
.github/workflows/: ci.yml
contest/: creative-proposal.html  mc-demo-nginx.conf  quick-test.sh  setup-demo.sh  test-archive.json  test-demo.sh  初赛帖正文.md  报名帖正文.md
crates/hippocampus-agents/src/: agent_family.rs  lib.rs
crates/hippocampus-core/: Cargo.toml
crates/hippocampus-core-logic/src/: bm25.rs  context_parser.rs  heuristic.rs  lib.rs  migrator.rs  model.rs  score.rs  semantic.rs  serialization.rs  vector.rs
crates/hippocampus-core/benches/: operations.rs
crates/hippocampus-core/src/: archive.rs  cache.rs  compact.rs  conflict.rs  generate.rs  heuristic.rs  index.rs  lib.rs  model.rs  retrieve.rs  score.rs  sqlite.rs  storage.rs
crates/hippocampus-ffi/: Cargo.toml
crates/hippocampus-ffi/include/: hippocampus.h
crates/hippocampus-ffi/src/: lib.rs
crates/hippocampus-ffi/tests/: ffi_integration.rs
crates/hippocampus-go/: Makefile  build.bat  go.mod  hippocampus.go  hippocampus_test.go
crates/hippocampus-java/: .gitignore  pom.xml
crates/hippocampus-java/src/main/java/io/github/lingtian303/hippocampus/: Hippocampus.java  HippocampusLibrary.java
crates/hippocampus-java/src/test/java/io/github/lingtian303/hippocampus/: HippocampusTest.java
crates/hippocampus-llm/src/: anchor_generator.rs  detector.rs  lib.rs  scorer.rs  summary_generator.rs
crates/hippocampus-mcp/: Cargo.toml
crates/hippocampus-mcp/src/: bootstrap.rs  lib.rs  main.rs
crates/hippocampus-mcp/tests/: pre_compress_integration.rs  scenario_detect_integration.rs
crates/hippocampus-models/: Cargo.toml
crates/hippocampus-models/src/: char_impl.rs  family.rs  lib.rs  registry.rs  tiktoken_impl.rs  tokenizer.rs  variant.rs
crates/hippocampus-presets/: Cargo.toml
crates/hippocampus-presets/src/: builder.rs  combined.rs  detect.rs  lib.rs  linkage.rs  scenario_detect.rs
crates/hippocampus-python/: Cargo.toml
crates/hippocampus-python/src/: lib.rs
crates/hippocampus-search/src/: search.rs  session_search.rs
crates/hippocampus-server/: Cargo.toml
crates/hippocampus-server/src/: error.rs  handlers.rs  lib.rs  main.rs  mcp.rs  presets.rs  session_search.rs
crates/hippocampus-server/src/middleware/: auth.rs  mod.rs
crates/hippocampus-server/tests/: http_integration.rs
crates/hippocampus-wasm/: Cargo.toml
crates/hippocampus-wasm/src/: bindings.rs  lib.rs
crates/hippocampus-wasm/tests/: api.rs
crates/hippocampus-windows/: Cargo.toml
crates/hippocampus-windows/src/: compression.rs  cooperation.rs  lib.rs  window_profile.rs
crates/memory-center-adapter/src/: lib.rs
crates/memory-center-agents/src/: agent_family.rs  hook_mode.rs  lib.rs
crates/memory-center-archive-core/: Cargo.toml
crates/memory-center-archive-core/src/: lib.rs
crates/memory-center-bench/benches/: format_compare.rs
crates/memory-center-bench/tests/: concurrent_archive.rs  concurrent_read_write.rs  concurrent_update.rs  sqlite_pool_stress.rs
crates/memory-center-core/: Cargo.toml
crates/memory-center-core-logic/src/: archive.rs  compact.rs  conflict.rs  context_parser.rs  heuristic.rs  model.rs  retrieve.rs  score.rs  serialization.rs  storage.rs
crates/memory-center-core/src/: cache.rs  sqlite.rs  storage.rs
crates/memory-center-core/tests/: full_flow.rs  session_meta_cached.rs  session_meta_local.rs  session_meta_sqlite.rs
crates/memory-center-ffi/tests/: ffi_integration.rs
crates/memory-center-llm/src/: anchor_generator.rs  detector.rs  scorer.rs  summary_generator.rs
crates/memory-center-mcp/src/: lib.rs
crates/memory-center-mcp/tests/: scenario_detect_integration.rs
crates/memory-center-presets/src/: builder.rs  scenario_detect.rs
crates/memory-center-python/src/: lib.rs
crates/memory-center-scenarios/src/: priority_tags.rs  profile.rs  retrieval_strategy.rs  scenario.rs  score_weights.rs  summary_focus.rs
crates/memory-center-server/: Cargo.toml
crates/memory-center-server/src/: handlers.rs  lib.rs  main.rs
crates/memory-center-sidecar/: Cargo.toml
crates/memory-center-sidecar/src/: archive.rs  config.rs  engine.rs  main.rs  opencode_db.rs  opencode_writer.rs  state.rs  watcher.rs
crates/memory-center-wasm/tests/: api.rs  memory_storage.rs
deploy/: mc-demo-memory-center.conf  memory-center.service  memory-center.service.example  nginx-hippo-block.conf  nginx-hippocampus.conf  nginx-memory-center-block.conf  nginx-memory-center.conf  openworld_nginx_with_mcp.conf  post-receive.sh  setup-auto-deploy.sh  setup-llm-env.sh  test_e2e.py  test_full_capabilities.py  wsl-build.sh
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEPLOY.md  POSITIONING.md  preset-crates-architecture.md  preset-crates-inventory.md  v2.30-roadmap-agent-onboarding.md  v2.31-roadmap-context-awareness.md
docs/onboarding/: deepseek-web.md  opencode.md  trae.md
docs/onboarding/rules/: catpaw-memory-center-archive.md  claude-code-memory-center-archive.md  opencode-memory-center-archive.md
docs/scenarios/: 03-mcp-coding-assistant.md  04-agent-coding-workflow.md
docs/src/: SUMMARY.md
docs/superpowers/plans/: 2026-07-06-scenario-auto-detect.md  2026-07-07-wasm-component.md
docs/superpowers/specs/: 2026-07-06-scenario-auto-detect-design.md  2026-07-07-pre-compress-hook-design.md  2026-07-07-wasm-component-design.md
eval/: EVAL_REPORT.md
eval/scripts/: common.py  probe_apis.py  probe_hippo.py  probe_memory_center.py  run_locomo.py  run_longmemeval.py
examples/: cross_agent_demo.sh
examples/c/: Makefile  README.md  build.bat  demo.c  test.c
examples/python/: README.md  demo.py
