# Hippocampus - Agent 记忆库
# Cargo workspace 根配置
# 工作区成员：核心库 + C ABI 动态库 + HTTP 服务 + Python 绑定

[workspace]
resolver = "2"
members = [
    "crates/hippocampus-core",
    "crates/hippocampus-models",
    "crates/hippocampus-scenarios",
    "crates/hippocampus-windows",
    "crates/hippocampus-agents",
    "crates/hippocampus-skills",
    "crates/hippocampus-presets",
    "crates/hippocampus-ffi",
    "crates/hippocampus-llm",
    "crates/hippocampus-search",
    "crates/hippocampus-server",
    "crates/hippocampus-python",
    "crates/hippocampus-node",
    "crates/hippocampus-mcp",
    "crates/hippocampus-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"  # napi 3.x 要求 1.88（rmcp 1.7 要求 1.85，已满足）
authors = ["lingtian303"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LINGTIAN303/Hippocampus"
description = "Agent 记忆库依赖库 - 持久化高效完整记忆法"
keywords = ["agent", "memory", "llm", "ai", "context"]
categories = ["data-structures", "filesystem", "api-bindings"]

# 工作区共享依赖（统一版本管理）
[workspace.dependencies]
# 序列化（MVP 用 JSON，可调试优先）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 唯一 ID
uuid = { version = "1.0", features = ["v4", "serde"] }
# 错误处理
thiserror = "1.0"
# 日志门面
tracing = "0.1"
# 异步 trait
async-trait = "0.1"
# 异步运行时（LocalStorage 文件 IO 用 tokio::fs；SqliteStorage 用 spawn_blocking 需要 rt）
tokio = { version = "1.0", features = ["fs", "sync", "io-util", "rt"] }
# MessagePack 序列化（双格式支持）
rmp-serde = "1.3"
# SQLite 嵌入式数据库（bundled 静态编译，免系统依赖）
rusqlite = { version = "0.32", features = ["bundled"] }
# 连接池（SQLite WAL 并发读）
r2d2 = "0.8"
r2d2_sqlite = "0.25"
# 细粒度并发锁（per session/project）
dashmap = "6.1"
# 中文分词（BM25 关键词检索用，纯 Rust 无外部依赖）
jieba-rs = "0.7"
# HTTP 框架（v2 服务层）
axum = "0.8"
tower-http = { version = "0.7", features = ["trace", "cors", "compression-gzip"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Python 绑定（v2.2 PyO3）
pyo3 = { version = "0.29", features = ["extension-module"] }
# Node.js 绑定（v2.14 napi-rs 3.x，异步 Promise）
napi = { version = "3", features = ["async", "tokio_rt"] }
napi-derive = "3"
# MCP 协议（v2.3 rmcp）
rmcp = { version = "1.7", features = ["schemars", "transport-io"] }
# 基准测试（v2.4 批次 4）
criterion = { version = "0.5", features = ["async_tokio"] }
# 临时目录（测试/基准测试用）
tempfile = "3.0"
# 高性能缓存（v2.5 批次 5 CachedStorage）
moka = { version = "0.12", features = ["future"] }
# 严格 LRU 缓存（v2.14 SessionSearchRouter StrictLRU 模式）
lru = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# criterion 基准测试专用 profile（继承 release，但保留调试符号便于分析）
[profile.bench]
inherits = "release"
debug = true
