# hippocampus-core
# 核心库 crate - 纯逻辑，无 IO 依赖

[package]
name = "hippocampus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hippocampus 核心库 - Agent 记忆库的纯逻辑核心（归档/索引/检索/周期任务/评分）"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
