[package]
name = "hippocampus-presets"
version.workspace = true
edition.workspace = true
description = "Hippocampus 预设组合层 - 5 特配 crate 的 Builder + 叠加引擎 + 联动机制"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hippocampus-core = { path = "../hippocampus-core", version = "0.1.0" }
hippocampus-models = { path = "../hippocampus-models", version = "0.1.0" }
hippocampus-scenarios = { path = "../hippocampus-scenarios", version = "0.1.0" }
hippocampus-windows = { path = "../hippocampus-windows", version = "0.1.0" }
hippocampus-agents = { path = "../hippocampus-agents", version = "0.1.0" }
hippocampus-skills = { path = "../hippocampus-skills", version = "0.1.0" }
hippocampus-llm = { path = "../hippocampus-llm", version = "0.1.0" }
# v2.33：HttpScenarioDetector 需要 reqwest::Client 调用 LLM API
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
# v2.33：HttpScenarioDetector 测试需要 #[tokio::test] 宏
tokio = { version = "1.0", features = ["rt", "macros"] }
