[package]
name = "hippocampus-presets"
version.workspace = true
edition.workspace = true
description = "Hippocampus 预设组合层 - 5 特配 crate 的 Builder + 叠加引擎 + 联动机制"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hippocampus-core = { path = "../hippocampus-core", version = "0.1.0" }
hippocampus-models = { path = "../hippocampus-models", version = "0.1.0" }
hippocampus-scenarios = { path = "../hippocampus-scenarios", version = "0.1.0" }
hippocampus-windows = { path = "../hippocampus-windows", version = "0.1.0" }
hippocampus-agents = { path = "../hippocampus-agents", version = "0.1.0" }
hippocampus-skills = { path = "../hippocampus-skills", version = "0.1.0" }
hippocampus-llm = { path = "../hippocampus-llm", version = "0.1.0" }
# v2.33：HttpScenarioDetector 需要 reqwest::Client 调用 LLM API
reqwest = { version = "0.12", features = ["json"] }
# v2.33：resolve_effective_scenario 用 chrono::Utc::now() 写入 detected_at
chrono = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
# v2.33：HttpScenarioDetector 测试需要 #[tokio::test] 宏
tokio = { version = "1.0", features = ["rt", "macros"] }
# v2.33：resolve_effective_scenario 测试需要 TempDir 创建临时存储
tempfile = { workspace = true }
# v2.35：env var 测试串行化（避免并行 set_var/remove_var 互相干扰）
serial_test = "3"
