# hippocampus-server
# HTTP/Axum REST API 服务 - 将 Core 暴露为 HTTP 接口供跨语言调用

[package]
name = "hippocampus-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hippocampus HTTP 服务 - Axum REST API，供所有语言通过 HTTP 调用"

[dependencies]
hippocampus-core = { path = "../hippocampus-core", version = "0.1.0" }
# v2.12: LLM 客户端组件（HttpLlmDetector / HttpEmbedder / HttpLlmScorer）下沉到独立 crate
hippocampus-llm = { path = "../hippocampus-llm", version = "0.1.0" }
# v2.18 批次2: 搜索模块（SessionSearchRouter + SearchIndexer）下沉到独立 crate
hippocampus-search = { path = "../hippocampus-search", version = "0.1.0" }
# v2.29: 预设组合层（PresetBuilder + CombinedProfile + 5 特配 crate）
hippocampus-presets = { path = "../hippocampus-presets", version = "0.1.0" }
hippocampus-agents = { path = "../hippocampus-agents", version = "0.1.0" }
hippocampus-scenarios = { path = "../hippocampus-scenarios", version = "0.1.0" }
hippocampus-models = { path = "../hippocampus-models", version = "0.1.0" }
hippocampus-windows = { path = "../hippocampus-windows", version = "0.1.0" }
hippocampus-skills = { path = "../hippocampus-skills", version = "0.1.0" }
axum.workspace = true
tokio = { version = "1.0", features = ["full"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3.0"
# HTTP 客户端用于集成测试
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
